Fix tickets on mobile

--- a/priv/site/_includes/css/components/Tickets.scss
+++ b/priv/site/_includes/css/components/Tickets.scss
@@ -5,7 +5,7 @@
     background-color: var(--c-gray);
 
     > .content {
-      padding: 0 var(--s-4);
+      padding: var(--s-4);
     }
 
     > .video {
